[gd_scene load_steps=15 format=2]

[ext_resource path="res://Src/Scene/CodeDevGenerator/CodeDevGenerator.gd" type="Script" id=1]
[ext_resource path="res://Assets/Resource/FontsRes/Kanit-Regular-Body-1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Resource/FontsRes/Kanit-Regular-H1.tres" type="DynamicFont" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Resource/FontsRes/Kanit-Regular-Body-3.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Resource/FontsRes/Kanit-Regular-H3.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Texture/copy.png" type="Texture" id=7]
[ext_resource path="res://Assets/Resource/FontsRes/Kanit-Regular-Body-2.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.105882, 0.266667, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id=7]
resource_name = "Float"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.105882, 0.266667, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CodeDevGenerator" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "A scene for game developer to generate unlock code from a request code.
<< Expand to see full detail >>

# Description
Developer can use this scene to generate an unlock code (presuming the client that requests it is allowed).

# Remixing UI
You may re-arrange or modify the UI elements for your own game whether you wish. Some node's structure are fixed by the script and may need to be updated through the script.

# Copying CodeDevGenerator To Your Project
There are dependencies for this scene to function. Below are the files that may need to be copied too.
- res://Src/Scene/CodeDevGenerator/CodeDevGenerator.tscn
- res://Src/Scene/CodeDevGenerator/CodeDevGenerator.gd
- res://Src/Util/AppHashLock/AppHashLock.gd
After opening this scene in your own project, Godot will ask you to fix missing dependencies. Locate the file 'CodeDevGenerator.gd' and this scene will be able to open for editing.

# Applying For Use In Your Project
Copy this scene and scripts as described above.

# Improving Security
There is a variable that might need to be changed for increased security.
- In CodeDevGenerator.gd, an export variable 'unique_app_id' is a password for your own application used to fetch request code and verify the unlock process."
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 364.0
margin_bottom = 624.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -174.0
margin_right = 174.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.901961, 0.72549, 0.188235, 1 )
text = "Password Generator"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/VBox"]
margin_top = 114.0
margin_right = 348.0
margin_bottom = 242.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="TitleHelp" type="Label" parent="MarginContainer/Control/VBox"]
margin_top = 258.0
margin_right = 348.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.105882, 0.266667, 1, 1 )
text = "Enter Request Code"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="MarginContainer/Control/VBox"]
margin_top = 304.0
margin_right = 348.0
margin_bottom = 345.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter the following request code from a client to generate an unlock code."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestLineEdit" type="LineEdit" parent="MarginContainer/Control/VBox"]
margin_top = 361.0
margin_right = 348.0
margin_bottom = 409.0
rect_min_size = Vector2( 0, 48 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0.176471, 0.176471, 0.176471, 1 )
custom_colors/cursor_color = Color( 0.176471, 0.176471, 0.176471, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 0
align = 1
clear_button_enabled = true
placeholder_text = "Enter request code..."

[node name="EmptyBox" type="ReferenceRect" parent="MarginContainer/Control/VBox"]
margin_top = 425.0
margin_right = 348.0
margin_bottom = 441.0
rect_min_size = Vector2( 0, 16 )

[node name="GenerateButton" type="Button" parent="MarginContainer/Control/VBox"]
margin_left = 110.0
margin_top = 457.0
margin_right = 238.0
margin_bottom = 493.0
rect_min_size = Vector2( 128, 36 )
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Generate"

[node name="SettingsToggleButton" type="Button" parent="MarginContainer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -20.0
grow_horizontal = 0
text = "Show/Hide Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UniqueIDPanel" type="Panel" parent="MarginContainer/Control/SettingsToggleButton"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -136.0
margin_bottom = -32.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Control/SettingsToggleButton/UniqueIDPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 14.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UniqueLabel" type="Label" parent="MarginContainer/Control/SettingsToggleButton/UniqueIDPanel/VBox"]
margin_right = 168.0
margin_bottom = 14.0
text = "Unique App ID"

[node name="UniqueLineEdit" type="LineEdit" parent="MarginContainer/Control/SettingsToggleButton/UniqueIDPanel/VBox"]
margin_top = 18.0
margin_right = 168.0
margin_bottom = 42.0
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "Your secret ID"

[node name="UniqueTip" type="Label" parent="MarginContainer/Control/SettingsToggleButton/UniqueIDPanel/VBox"]
margin_top = 46.0
margin_right = 168.0
margin_bottom = 77.0
custom_colors/font_color = Color( 1, 1, 0.501961, 1 )
text = "*Do not share this code to client!"
autowrap = true

[node name="OutputCtrl" type="Control" parent="MarginContainer"]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 364.0
margin_bottom = 624.0

[node name="OutputTitle" type="Label" parent="MarginContainer/OutputCtrl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -174.0
margin_right = 174.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Unlock Code"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MarginContainer/OutputCtrl"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputLabel" type="Label" parent="MarginContainer/OutputCtrl/VBox"]
margin_top = 226.0
margin_right = 348.0
margin_bottom = 269.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.105882, 0.266667, 1, 1 )
text = "123456"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyButton" type="TextureButton" parent="MarginContainer/OutputCtrl/VBox/OutputLabel"]
modulate = Color( 1, 1, 1, 0.580392 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -19.5
margin_bottom = 19.5
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopiedLabel" type="Label" parent="MarginContainer/OutputCtrl/VBox/OutputLabel"]
visible = false
margin_right = 96.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.901961, 0.72549, 0.188235, 1 )
text = "Copied to clipboard!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/OutputCtrl/VBox/OutputLabel/CopiedLabel"]
anims/Float = SubResource( 7 )

[node name="OutputDesc" type="Label" parent="MarginContainer/OutputCtrl/VBox"]
margin_top = 301.0
margin_right = 348.0
margin_bottom = 382.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This is an unlock code for your game.
Please note that the password works only for your device and valid until 12:00 AM."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnBtn" type="Button" parent="MarginContainer/OutputCtrl"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
grow_vertical = 0
rect_min_size = Vector2( 0, 36 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/Control/VBox/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="pressed" from="MarginContainer/Control/SettingsToggleButton" to="." method="_on_SettingsToggleButton_pressed"]
[connection signal="text_changed" from="MarginContainer/Control/SettingsToggleButton/UniqueIDPanel/VBox/UniqueLineEdit" to="." method="_on_UniqueLineEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/OutputCtrl/VBox/OutputLabel/CopyButton" to="." method="_on_CopyButton_pressed"]
[connection signal="pressed" from="MarginContainer/OutputCtrl/ReturnBtn" to="." method="_on_ReturnBtn_pressed"]
